Fix wide modal popups (e.g. Copyright element) clipping over screen edge

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
@@ -105,6 +105,7 @@
     .popup {
       margin: 0 auto;
       max-height: 100%;
+      max-width: 100%;
       &.fom-popup {
         // .fom-popup buttons are styled with position: absolute; forcing max height on the poopup prevents them from
         // leaking into content or going off-screen
